Thu, 27 Mar 2008 13:10:58 +0100 <thp@perli.net>
This is trunk, so set version to 0.11.1+svn

	* bin/gpodder: Set version to 0.11.1+svn

Thu, 27 Mar 2008 12:57:56 +0100 <thp@perli.net>
gPodder 0.11.1 "Attacked by Killer Tomatoes" released

	* bin/gpodder: gPodder 0.11.1 released :)
	* README: gPodder 0.11.1 released :)
	* doc/man/gpodder.1: gPodder 0.11.1 released :)
	* data/icons/24/gpodder.png: Updated from the dataset
	* data/messages.pot: Updated from source
	* data/po/*.po: Updated from messages.pot
	* data/po/de.po: Updated German translation

Thu, 27 Mar 2008 11:52:35 +0100 <thp@perli.net>
Use cPickle for dumbshelve - it's compatible and faster

	* src/gpodder/dumbshelve.py: Improve saving of channel cache and
	metadata (and basically all that currently depends on dumbshelve) by
	using cPickle as a drop-in replacement for pickle

Thu, 27 Mar 2008 11:28:31 +0100 <thp@perli.net>
Fix problem with pickle when there is a feed parsing exception

	* src/gpodder/cache.py: When the feedparser returns an exception, this
	will be stored as object in bozo_exception. Convert this to a string,
	so the pickle module doesn't complain; thanks to VladDrac in #python
	on FreeNode for pointing me to the right direction to fix this bug

Mon, 24 Mar 2008 10:42:19 +0100 <thp@perli.net>
Add "3gp" to the list of video file extensions, so we detect these files

	* src/gpodder/util.py: Add the .3gp video file extension to the list
	of known video file extensions, so we can detect that these are video
	files and act accordingly (in the UI and on sync); thanks to Atte
	André Jensen for reporting this bug on the gpodder-devel mailing list

Sun, 23 Mar 2008 10:39:24 +0100 <thp@perli.net>
Fix a bug when loading invalid image data (delete cover file then)

	* src/gpodder/libgpodder.py: Fix a bug when gPodder is unable to load
	an invalid cover image (i.e. when dragging a linked image from the
	browser to the gPodder window, the link is sent, not the image)
